--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="../index-main.html" aria-current="page">Home</a>
+              <a class="nav-link active" href="../index.html" aria-current="page">Home</a>
             </li>
 
             <li class="nav-item dropdown">
