--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -13,7 +13,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
         crossorigin="anonymous"
       />
-      <link rel="stylesheet" href="../styles/styles.css" />
+      <link rel="stylesheet" href="../styles/global.css" />
 </head>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
