--- a/npc-index/npc-pages/celestial-highlands/selene-vale.html
+++ b/npc-index/npc-pages/celestial-highlands/selene-vale.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Selene Vale - Enchanter</title>
-  <link rel="stylesheet" href="../../../styles/styles.css">
+  <link rel="stylesheet" href="../../../styles/global.css">
 </head>
 <body>
   <h1 style="text-align: center;">Selene Vale – The Enchanter of Unspoken Smiles</h1>
