--- a/npc-index/npc-pages/celestial-highlands/yethryn-dorr.html
+++ b/npc-index/npc-pages/celestial-highlands/yethryn-dorr.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yethryn Dorr – The Sky’s Forgotten Compass</title>
-  <link rel="stylesheet" href="../../../styles/styles.css">
+  <link rel="stylesheet" href="../../../styles/global.css">
 </head>
 <body>
   <h1 style="text-align: center;">Yethryn Dorr – The Sky’s Forgotten Compass</h1>
