--- a/npc-index/npc-pages/empire-of-tides/captain-maxwell.html
+++ b/npc-index/npc-pages/empire-of-tides/captain-maxwell.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Captain Maxwell Bloodmoon – The Cat Who Loved a Crown</title>
-  <link rel="stylesheet" href="../../../styles/styles.css" />
+  <link rel="stylesheet" href="../../../styles/global.css" />
 </head>
 <body>
   <div class="container">
