--- a/npc-index/npc-pages/twilight-isles/revna-hollowthorn.html
+++ b/npc-index/npc-pages/twilight-isles/revna-hollowthorn.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Revna Hollowthorn – The Blade That Burns Back</title>
-  <link rel="stylesheet" href="../../../styles/styles.css" />
+  <link rel="stylesheet" href="../../../styles/global.css" />
 </head>
 <body>
   <div class="container">
