--- a/npc-index/npc-pages/celestial-highlands/ilreth-solshade.html
+++ b/npc-index/npc-pages/celestial-highlands/ilreth-solshade.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ilreth Solshade – The Echo Between Stars</title>
+  <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
 </head>
 <body>
