--- a/npc-index/npc-pages/empire-of-tides/captain-yorra-vayne.html
+++ b/npc-index/npc-pages/empire-of-tides/captain-yorra-vayne.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Captain Yorra Vayne – Queen of the Crimson Skies</title>
+  <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
 </head>
 <body>
