--- a/npc-index/npc-pages/twilight-isles/sister-meriel-vael.html
+++ b/npc-index/npc-pages/twilight-isles/sister-meriel-vael.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sister Meriel Vael – The Dreaming Flame</title>
+  <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
 </head>
 <body>
