--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -15,6 +15,7 @@
       />
       <link rel="stylesheet" href="../styles/fonts.css" />
       <link rel="stylesheet" href="../styles/global.css" />
+      <link rel="stylesheet" href="../styles/npc-index.css" />
 </head>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
