--- a/npc-index/npc-pages/celestial-highlands/ilreth-solshade.html
+++ b/npc-index/npc-pages/celestial-highlands/ilreth-solshade.html
@@ -6,6 +6,7 @@
   <title>Ilreth Solshade – The Echo Between Stars</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
