--- a/npc-index/npc-pages/celestial-highlands/selene-vale.html
+++ b/npc-index/npc-pages/celestial-highlands/selene-vale.html
@@ -6,6 +6,7 @@
   <title>Selene Vale - Enchanter</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css">
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <h1 style="text-align: center;">Selene Vale – The Enchanter of Unspoken Smiles</h1>
