--- a/npc-index/npc-pages/celestial-highlands/yethryn-dorr.html
+++ b/npc-index/npc-pages/celestial-highlands/yethryn-dorr.html
@@ -6,6 +6,7 @@
   <title>Yethryn Dorr – The Sky’s Forgotten Compass</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css">
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <h1 style="text-align: center;">Yethryn Dorr – The Sky’s Forgotten Compass</h1>
