--- a/npc-index/npc-pages/empire-of-tides/captain-maxwell.html
+++ b/npc-index/npc-pages/empire-of-tides/captain-maxwell.html
@@ -6,6 +6,7 @@
   <title>Captain Maxwell Bloodmoon – The Cat Who Loved a Crown</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
