--- a/npc-index/npc-pages/empire-of-tides/captain-yorra-vayne.html
+++ b/npc-index/npc-pages/empire-of-tides/captain-yorra-vayne.html
@@ -6,6 +6,7 @@
   <title>Captain Yorra Vayne – Queen of the Crimson Skies</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
