--- a/npc-index/npc-pages/empire-of-tides/fenra-veln.html
+++ b/npc-index/npc-pages/empire-of-tides/fenra-veln.html
@@ -6,6 +6,7 @@
   <title>Fenra Veln – The Hand That Shields</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
