--- a/npc-index/npc-pages/empire-of-tides/gravik-irontide.html
+++ b/npc-index/npc-pages/empire-of-tides/gravik-irontide.html
@@ -6,6 +6,7 @@
   <title>Gravik Irontide – Stone Salt and Sea Song</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
