--- a/npc-index/npc-pages/twilight-isles/kaelen-duskwind.html
+++ b/npc-index/npc-pages/twilight-isles/kaelen-duskwind.html
@@ -6,6 +6,7 @@
   <title>Kaelen Duskwind – The Mapmaker of Meaning</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
