--- a/npc-index/npc-pages/twilight-isles/revna-hollowthorn.html
+++ b/npc-index/npc-pages/twilight-isles/revna-hollowthorn.html
@@ -6,6 +6,7 @@
   <title>Revna Hollowthorn – The Blade That Burns Back</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
