--- a/npc-index/npc-pages/twilight-isles/sister-meriel-vael.html
+++ b/npc-index/npc-pages/twilight-isles/sister-meriel-vael.html
@@ -6,6 +6,7 @@
   <title>Sister Meriel Vael – The Dreaming Flame</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
