--- a/npc-index/npc-pages/twilight-isles/vaela-raen.html
+++ b/npc-index/npc-pages/twilight-isles/vaela-raen.html
@@ -6,6 +6,7 @@
   <title>Vaela Raen – The Moon's Devotion</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
