--- a/npc-index/npc-pages/twilight-isles/velka-aresk.html
+++ b/npc-index/npc-pages/twilight-isles/velka-aresk.html
@@ -6,6 +6,7 @@
   <title>Velka Aresk – The Ink of the Departed</title>
   <link rel="stylesheet" href="../../../styles/fonts.css" />
   <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
   <div class="container">
