--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   />
   <link rel="stylesheet" href="styles/fonts.css" />
   <link rel="stylesheet" href="styles/global.css" />
+  <link rel="stylesheet" href="styles/root-index.css" />
 </head>
 
 <body>
