--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -74,10 +74,10 @@
     </nav>
 
 <body>
-  <h1>D&D NPC Reference Table</h1>
+  <h1 class="npc-ref-title">D&D NPC Reference Table</h1>
 
-<h2>Celestial Highlands</h2>
-<table>
+<h2 class="npc-ref-place">Celestial Highlands</h2>
+<table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/celestial-highlands/tharn-vellmor.html" target="_blank">Tharn Vellmor</a></td><td>Exiled Noble</td><td>Half-Elf</td><td>Elegant, calculating</td></tr>
   <tr><td><a href="npc-pages/celestial-highlands/selene-vale.html" target="_blank">Selene Vale</a></td><td>Enchanter</td><td>Elf</td><td>Unpredictable charm dealer</td></tr>
@@ -85,8 +85,8 @@
   <tr><td><a href="npc-pages/celestial-highlands/yethryn-dorr.html" target="_blank">Yethryn Dorr</a></td><td>Sky Archivist</td><td>Elf</td><td>Maps skies for prophecy</td></tr>
 </table>
 
-<h2>Twilight Isles</h2>
-<table>
+<h2 class="npc-ref-place">Twilight Isles</h2>
+<table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/twilight-isles/kaelen-duskwind.html" target="_blank">Kaelen Duskwind</a></td><td>Cartographer</td><td>Kalashtar</td><td>Poetic, stargazer</td></tr>
   <tr><td><a href="npc-pages/twilight-isles/revna-hollowthorn.html" target="_blank">Revna Hollowthorn</a></td><td>Warlock-for-hire</td><td>Shadar-Kai</td><td>Voidroot cynic</td></tr>
@@ -95,8 +95,8 @@
   <tr><td><a href="npc-pages/twilight-isles/vaela-raen.html" target="_blank">Vaela Raen</a></td><td>Moon Priestess</td><td>Kalashtar</td><td>Soft voice, moon magic</td></tr>
 </table>
 
-<h2>Empire of Tides</h2>
-<table>
+<h2 class="npc-ref-place">Empire of Tides</h2>
+<table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/empire-of-tides/captain-yorra-vayne.html" target="_blank">Captain Yorra Vayne</a></td><td>Skyship Pirate</td><td>Human</td><td>Flamboyant ex-noble</td></tr>
   <tr><td><a href="npc-pages/empire-of-tides/gravik-irontide.html" target="_blank">Gravik Irontide</a></td><td>Pirate Quartermaster</td><td>Dwarf</td><td>Gruff, drinks ink</td></tr>
@@ -104,8 +104,8 @@
   <tr><td><a href="npc-pages/empire-of-tides/captain-maxwell.html" target="_blank">Captain Maxwell</a></td><td>Sea Captain/Pirate Lord</td><td>Tabaxi</td><td>Flashy, reckless, obsessed with treasure and theatrics</td></tr>
 </table>
 
-<h2>Ember Deserts</h2>
-<table>
+<h2 class="npc-ref-place">Ember Deserts</h2>
+<table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/ember-deserts/tolla-jinxfuse.html" target="_blank">Tolla Jinxfuse</a></td><td>Tinkerer</td><td>Gnome</td><td>Explosive and eccentric</td></tr>
   <tr><td><a href="npc-pages/ember-deserts/nirra-glintstream.html" target="_blank">Nirra Glintstream</a></td><td>Cook</td><td>Halfling</td><td>Joy-magic comfort food</td></tr>
@@ -120,24 +120,24 @@
   <tr><td><a href="npc-pages/ember-deserts/orama-tal.html" target="_blank">Ora'ma Tal</a></td><td>Flame-Touched Oracle</td><td>Dragonborn</td><td>Mutters prophecy through cracked lips—fire dances in her eyes</td></tr>
 </table>
 
-<h2>Eltoria</h2>
-<table>
+<h2 class="npc-ref-place">Eltoria</h2>
+<table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/eltoria/hett-mosswick.html" target="_blank">Hett Mosswick</a></td><td>Apothecary</td><td>Firbolg</td><td>Speaks with plants</td></tr>
   <tr><td><a href="npc-pages/eltoria/kess-talren.html" target="_blank">Kess Tal’Ren</a></td><td>Healer</td><td>Human</td><td>Stern, wise</td></tr>
   <tr><td><a href="npc-pages/eltoria/dorus-kel.html" target="_blank">Dorus Kel</a></td><td>Blight Farmer</td><td>Halfling</td><td>Morbid, death-crop grower</td></tr>
 </table>
 
-<h2>Eldara</h2>
-<table>
+<h2 class="npc-ref-place">Eldara</h2>
+<table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/eldara/vess-talorin.html" target="_blank">Vess Talorin</a></td><td>Arcane Scholar</td><td>Elf</td><td>Sharp-tongued, loyal</td></tr>
   <tr><td><a href="npc-pages/eldara/brenn-talveth.html" target="_blank">Brenn Talveth</a></td><td>Librarian/Seer</td><td>Half-Elf</td><td>Lost eye to a cursed tome</td></tr>
   <tr><td><a href="npc-pages/eldara/lira-solmere.html" target="_blank">Lira Solmere</a></td><td>Crystal Alchemist</td><td>Elf</td><td>Speaks in riddles</td></tr>
 </table>
 
-<h2>Trade Cities</h2>
-<table>
+<h2 class="npc-ref-place">Trade Cities</h2>
+<table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/trade-cities/mazrik-vallo.html" target="_blank">Mazrik "The Coin" Vallo</a></td><td>Merchant Lord</td><td>Human</td><td>Funds both sides</td></tr>
   <tr><td><a href="npc-pages/trade-cities/shae-grindlehook.html" target="_blank">Shae Grindlehook</a></td><td>Info Broker</td><td>Halfling</td><td>Too-cheerful gossip</td></tr>
@@ -147,8 +147,8 @@
   <tr><td><a href="npc-pages/trade-cities/tarnel-verin.html" target="_blank">Tarnel Verin</a></td><td>Silent Courier</td><td>Half-Elf</td><td>Delivers, never speaks</td></tr>
 </table>
 
-<h2>Unknown / Wandering</h2>
-<table>
+<h2 class="npc-ref-place">Unknown / Wandering</h2>
+<table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/unknown-wandering/ilvara-sunsheen.html" target="_blank">Ilvara Sunsheen</a></td><td>Bard</td><td>Elf</td><td>Sings secrets, beautiful</td></tr>
   <tr><td><a href="npc-pages/unknown-wandering/torak-the-blue.html" target="_blank">Torak the Blue</a></td><td>Wandering Wizard</td><td>Unknown</td><td>Soup and cryptic wisdom</td></tr>
