--- a/npc-index/npc-pages/celestial-highlands/ilreth-solshade.html
+++ b/npc-index/npc-pages/celestial-highlands/ilreth-solshade.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Ilreth Solshade – The Echo Between Stars</h1>
+    <h1 class="npc-title">Ilreth Solshade – The Echo Between Stars</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Ilreth Solshade was born in the golden bloom of the Dawn Cycle, when the Twilight Isles still basked in morning light and the sea caught fire with each rising sun. As a Kalashtar child, she carried the quiet strength of her people and the strange, patient pull of dreams that knew more than they should.</p>
 
       <p>She was raised among tide-blessed gardens and stone-lantern paths, where songs were whispered into salt winds and memories lived longer than names. But Ilreth’s mind drifted beyond the reverent calm of the Isles. She heard stories in shadows, truths in riddles. Even as a girl, she dreamed of things no one could explain.</p>
@@ -54,9 +54,9 @@
       <p><em>It is not gone. Only waiting.</em></p>
     </section>
 <hr>
-    <h2 class="section-title">Of Lanterns, Legends, and the Girl Who Listened</h2>
+    <h2 class="npc-title”>Of Lanterns, Legends, and the Girl Who Listened</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Zostara remembered few lessons from the Citadel that stayed with her—not because they weren’t well-taught, but because they weren’t meant to be remembered. Most were rehearsals of pride, long-form lullabies about elven supremacy and the "proper" flow of magic.</p>
 
       <p>But Ilreth Solshade taught differently.</p>
