--- a/npc-index/npc-pages/celestial-highlands/selene-vale.html
+++ b/npc-index/npc-pages/celestial-highlands/selene-vale.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
-  <h1 style="text-align: center;">Selene Vale – The Enchanter of Unspoken Smiles</h1>
+  <h1 class="npc-title"> Selene Vale – The Enchanter of Unspoken Smiles</h1>
   <br>
-  <section>
+  <section class="npc-story">
     <p>In the crystal spires of the Citadel, where silence was a virtue and grace a law, Selene Vale existed like a song no one could stop humming.</p>
 
     <p>A pure-blood high elf of a well-respected lineage, Selene was born beneath etched vaults and glowing sigils, surrounded by perfection and pressure. From the moment she could walk, she was expected to follow the unspoken choreography of noble life: bow just enough, speak just softly enough, never laugh too loud.</p>
@@ -47,9 +47,9 @@
     <p>But for now, she smiles her strange little smile, blends in just enough, and keeps her work humming just below the surface of the tower that raised her.</p>
   </section>
 <hr>
-  <h2 style="text-align: center;">Of Trinkets, Trouble, and Trade Deals in Shadows</h2>
+  <h2 class="npc-title">Of Trinkets, Trouble, and Trade Deals in Shadows</h2>
   <br>
-  <section>
+  <section class="npc-story">
     <p>The Citadel of the Celestial Highlands was carved into mountains that had never known dust. Its towers gleamed with moonlight polished brighter than truth. Its halls echoed with centuries of perfect silence.</p>
 
     <p>And Selene Vale shattered that silence like a giggle in a library.</p>
