--- a/npc-index/npc-pages/celestial-highlands/tharn-vellmor.html
+++ b/npc-index/npc-pages/celestial-highlands/tharn-vellmor.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-  <h1>Tharn Vellmor – Exiled Noble of the Celestial Highlands</h1>
+  <h1 class="npc-title">Tharn Vellmor – Exiled Noble of the Celestial Highlands</h1>
 
 <br>
-
+<section>
   <p>Once, Tharn Vellmor stood beneath crystal chandeliers that hummed with starlight, his words weighed and sharpened like the blades worn by his ancestors. Born to a high elven mother of ancient pedigree and a human father of minor nobility, Tharn was a curiosity from the moment he took his first breath. A child of two worlds, raised in one, accepted by neither.</p>
 
   <p>In the Celestial Highlands, lineage was law, and purity was its measure. Tharn was tolerated—even occasionally celebrated for his wit and his understanding of courtly etiquette—but never truly embraced. He learned early how to survive on poise alone. He mastered rhetoric, memorized family trees, and listened more than he spoke. In the court, information was currency, and silence was sometimes worth more than gold.</p>
@@ -54,14 +54,14 @@
 
   <p><strong>He is elegant. He is calculating.</strong><br>
   <strong>And for the first time in his life, Tharn Vellmor belongs exactly where he stands.</strong></p>
-
+</section>
   <hr>
 
-  <h2>The Smuggler and the Exile</h2>
+  <h2 class="npc-title">The Smuggler and the Exile</h2>
 
   <br>
-
-  <p>The tunnels beneath the Celestial Highlands were never silent, only forgotten.</p>
+<section>
+  <p class="npc-story">The tunnels beneath the Celestial Highlands were never silent, only forgotten.</p>
 
   <p>Water dripped from roots older than the noble lines above. Faint rumbling echoed from far-off dwarven forges, dull and exhausted like a song half-remembered. And there, tucked into a shallow vault beneath the marble spine of the elven world, waited a noble dressed in exile—cloak stitched from salvaged silks, boots caked in soil too honest for the court he’d once walked.</p>
 
@@ -122,6 +122,6 @@
   <p>Tharn never said thank you. Shade never asked for one. Zostara never needed it.</p>
 
   <p>But when the dwarves whisper of the noble who betrayed his own kind, they often speak of the two strangers who helped him vanish into the stone—one silent as a blade, the other bright as defiance.</p>
-
+</section>
 </body>
 </html>
