--- a/npc-index/npc-pages/celestial-highlands/yethryn-dorr.html
+++ b/npc-index/npc-pages/celestial-highlands/yethryn-dorr.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="../../../styles/npc-index.css" />
 </head>
 <body>
-  <h1 style="text-align: center;">Yethryn Dorr – The Sky’s Forgotten Compass</h1>
+  <h1 class="npc-title">Yethryn Dorr – The Sky’s Forgotten Compass</h1>
 <br>
-  <section>
+  <section class="npc-story">
     <p>Yethryn Dorr was born under a storm-thick canopy in the heart of the Ironwood, where the stars were whispered about more than seen. Even as a child, she listened more to the wind than her tutors, more to the rhythm of falling leaves than the rigid doctrines of her village. Her eyes always drifted upward—to the few patches of sky that broke through the ancient trees, to the slivers of moonlight that pierced the branches like forgotten promises.</p>
 
     <p>When she came of age, she did not linger.</p>
@@ -62,9 +62,10 @@
     She’ll be the only one who knows how to listen.</p>
   </section>
 <hr>
-  <section>
-    <h2>Of Falling Stars and Shadowed Fates</h2>
+  
+    <h2 class="npc-title">Of Falling Stars and Shadowed Fates</h2>
     <br>
+  <section class="npc-story">
     <p>Shade didn’t seek out many people in the Highlands. Most of them talked too much, or not at all—wrapped in their own sanctimonious glow, like they were born breathing thinner, cleaner air.</p>
 
     <p>But Yethryn Dorr was different.</p>
