--- a/npc-index/npc-pages/celestial-highlands/ilreth-solshade.html
+++ b/npc-index/npc-pages/celestial-highlands/ilreth-solshade.html
@@ -54,7 +54,7 @@
       <p><em>It is not gone. Only waiting.</em></p>
     </section>
 <hr>
-    <h2 class="npc-title”>Of Lanterns, Legends, and the Girl Who Listened</h2>
+    <h2 class="npc-title">Of Lanterns, Legends, and the Girl Who Listened</h2>
     <br>
     <section class="npc-story">
       <p>Zostara remembered few lessons from the Citadel that stayed with her—not because they weren’t well-taught, but because they weren’t meant to be remembered. Most were rehearsals of pride, long-form lullabies about elven supremacy and the "proper" flow of magic.</p>
