--- a/npc-index/npc-pages/celestial-highlands/tharn-vellmor.html
+++ b/npc-index/npc-pages/celestial-highlands/tharn-vellmor.html
@@ -11,9 +11,8 @@
 <body>
 
   <h1 class="npc-title">Tharn Vellmor – Exiled Noble of the Celestial Highlands</h1>
-
 <br>
-<section>
+<section class="npc-story">
   <p>Once, Tharn Vellmor stood beneath crystal chandeliers that hummed with starlight, his words weighed and sharpened like the blades worn by his ancestors. Born to a high elven mother of ancient pedigree and a human father of minor nobility, Tharn was a curiosity from the moment he took his first breath. A child of two worlds, raised in one, accepted by neither.</p>
 
   <p>In the Celestial Highlands, lineage was law, and purity was its measure. Tharn was tolerated—even occasionally celebrated for his wit and his understanding of courtly etiquette—but never truly embraced. He learned early how to survive on poise alone. He mastered rhetoric, memorized family trees, and listened more than he spoke. In the court, information was currency, and silence was sometimes worth more than gold.</p>
@@ -58,10 +57,9 @@
   <hr>
 
   <h2 class="npc-title">The Smuggler and the Exile</h2>
-
   <br>
-<section>
-  <p class="npc-story">The tunnels beneath the Celestial Highlands were never silent, only forgotten.</p>
+<section class="npc-story">
+  <p>The tunnels beneath the Celestial Highlands were never silent, only forgotten.</p>
 
   <p>Water dripped from roots older than the noble lines above. Faint rumbling echoed from far-off dwarven forges, dull and exhausted like a song half-remembered. And there, tucked into a shallow vault beneath the marble spine of the elven world, waited a noble dressed in exile—cloak stitched from salvaged silks, boots caked in soil too honest for the court he’d once walked.</p>
 
