--- a/npc-index/npc-pages/empire-of-tides/captain-maxwell.html
+++ b/npc-index/npc-pages/empire-of-tides/captain-maxwell.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Captain Maxwell Bloodmoon – The Cat Who Loved a Crown</h1>
+    <h1 class="npc-title">Captain Maxwell Bloodmoon – The Cat Who Loved a Crown</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Nobody knows where Maxwell Bloodmoon was born.</p>
 
       <p>Some say he prowled into the world on the deck of a burning ship, soot-slick and smiling. Others whisper he was once a prince himself, exiled for refusing to bow. There’s even a tavern in the Gilded Trawl that swears he clawed his way out of a leviathan’s belly, fully grown and already charming.</p>
@@ -70,9 +70,9 @@
       <p>But always soft enough to feel.</p>
     </section>
 <hr>
-<h2 class="section-title">Of Tabaxi Tails and Truths Untold</h2>
+<h2 class="npc-title">Of Tabaxi Tails and Truths Untold</h2>
 <br>
-<section class="story-section">
+<section class="npc-story">
   <p>Captain Maximilian Aurelius Tiberius Ziggifrax Blackwhisker D’Vindica Bloodmoon the 1st—known to everyone who tolerates his bombast simply as Maxwell—first encountered Shade in the Ember Spire Market when the sun had just begun to slant golden across the stalls. Exotic wares from Eltoria glittered under torchlight: vials of foxfire sap, fermented mushroom wines, and bright-green moss that hummed with hidden arcane power. Maxwell arrived in full theatrical flare, voice booming as he recited his entire pompous title, convinced that everyone within earshot would swoon in admiration. Instead, a lone Tabaxi with pristine white fur, negotiating quietly with a Firbolg merchant, lifted a hand to cut him off.</p>
 
   <p>“Maxwell, yes. I know who you are. Let’s skip the theatrics, shall we?” she said, her tone equal parts exasperated and amused.</p>
