--- a/npc-index/npc-pages/empire-of-tides/captain-yorra-vayne.html
+++ b/npc-index/npc-pages/empire-of-tides/captain-yorra-vayne.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Captain Yorra Vayne – Queen of the Crimson Skies</h1>
+    <h1 class="npc-title">Captain Yorra Vayne – Queen of the Crimson Skies</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Yorra Vayne was born with silk sheets and coral crowns.</p>
 
       <p>Her family ruled one of the lesser isles of the Empire of Tides—a lush crescent of land famed for its orchards, pearls, and people too polite to be honest. From birth, Yorra was draped in finery and shackled with expectations. Debutante balls, diplomacy lessons, arranged future suitors—it was all so terribly dull.</p>
@@ -54,9 +54,9 @@
       <p>And the wind is rarely polite.</p>
     </section>
     <hr>
-    <h2 class="section-title">Of Sand, Sky, and the Beginning of a Beautiful Chaos</h2>
+    <h2 class="npc-title">Of Sand, Sky, and the Beginning of a Beautiful Chaos</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Zostara’s first steps into the material world landed her in heat.</p>
 
       <p>Not trouble—yet—but true, shimmering heat. The kind that turned the sandstone streets of the Ember Desert port city into mirrored rivers. She arrived barefoot, dust on her cloak, the salt of sea air and spice on her breath. The people moved fast. The colors were loud. The music was louder.</p>
