--- a/npc-index/npc-pages/empire-of-tides/fenra-veln.html
+++ b/npc-index/npc-pages/empire-of-tides/fenra-veln.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Fenra Veln – The Hand That Shields</h1>
+    <h1 class="npc-title">Fenra Veln – The Hand That Shields</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Fenra Veln was born in the middle of a war she didn’t choose.</p>
 
       <p>Not a grand war. Not one that would be etched in history or recited by scholars with maps and markers. Just a small, ugly, too-personal kind of war—a territorial dispute between pirate lords and the coastal noble who claimed the island she called home.</p>
@@ -84,9 +84,9 @@
       <p><em>Always.</em></p>
     </section>
     <hr>
-    <h2 class="section-title">Of Sand, Steel, and a Promise Forged</h2>
+    <h2 class="npc-title">Of Sand, Steel, and a Promise Forged</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>The Ember Desert did not care who you were.</p>
 
       <p>It did not flinch at nobility, genius, or legend. It did not yield to gold, or fame, or even magic. It simply was—an ocean of heat and silence and wind-cut rock that stripped all pretense from a traveler until only truth remained.</p>
