--- a/npc-index/npc-pages/empire-of-tides/gravik-irontide.html
+++ b/npc-index/npc-pages/empire-of-tides/gravik-irontide.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Gravik Irontide – Stone Salt and Sea Song</h1>
+    <h1 class="npc-title">Gravik Irontide – Stone Salt and Sea Song</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Gravik Irontide was born not in a cradle, but in a chamber of brass and pressure.</p>
 
       <p>The submersible that served as his birthplace drifted through the black currents of the Deep Vein Trench, a region of the sea so dense with mineral sediment and magical flow that the hull hummed with power. His parents, seasoned adventurers and engineers of the Irontide clan, were mapping ancient leyline fractures when Gravik first cried—or rather, scowled. His mother said he emerged already grumbling.</p>
@@ -50,9 +50,9 @@
       <p><em>The sky lets you chase back.</em></p>
     </section>
 <hr>
-    <h2 class="section-title">Of Ledgers, Lies, and a Lot of Ale</h2>
+    <h2 class="npc-title">Of Ledgers, Lies, and a Lot of Ale</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Shade met Gravik Irontide the same way most people did—by accidentally sitting in his chair at a tavern table clearly marked by three empty mugs and a dagger halfway through the wood.</p>
 
       <p>To her credit, she didn’t flinch when the dwarf returned.</p>
