--- a/npc-index/npc-pages/twilight-isles/kaelen-duskwind.html
+++ b/npc-index/npc-pages/twilight-isles/kaelen-duskwind.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Kaelen Duskwind – The Mapmaker of Meaning</h1>
+    <h1 class="npc-title">Kaelen Duskwind – The Mapmaker of Meaning</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Kaelen Duskwind was born into the hush of eternal twilight—one of the rare Kalashtar born after the end of the Dawn Cycle. In a land where dreams drift like tides and starlight falls like rain, he was a child of subtle miracles. Few outside the Isles even believe such births are possible. Fewer still believe they survive. But Kaelen did more than survive.</p>
 
       <p>He found beauty.</p>
@@ -38,9 +38,9 @@
       <p>Wherever he goes, Kaelen leaves behind not just direction, but reflection. Because to him, the world is not meant to be owned. It is meant to be seen.</p>
     </section>
     <hr>
-    <h2 class="section-title">Of Maps, Moonlight, and the Bonds That Remain</h2>
+    <h2 class="npc-title">Of Maps, Moonlight, and the Bonds That Remain</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Zostara and Kaelen were born only a few seasons apart, both under the strange hush that followed the end of the Dawn Cycle. Two Kalashtar children born into a world that was never meant to see their kind again—an anomaly that could have isolated them, but instead bound them.</p>
 
       <p>They were inseparable for much of their youth. Long nights spent chasing fireflies through misty groves, daring each other to climb too-high cliffs to “see the whole world,” scribbling half-finished legends in the margins of old maps they weren't supposed to touch. Where Zostara saw stories in voices and faces, Kaelen saw them in shape and silhouette—in the gentle arc of a hill, the lonely bend of a coastline, the spirals hidden in tide-worn stone.</p>
