--- a/npc-index/npc-pages/twilight-isles/revna-hollowthorn.html
+++ b/npc-index/npc-pages/twilight-isles/revna-hollowthorn.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Revna Hollowthorn – The Blade That Burns Back</h1>
+    <h1 class="npc-title">Revna Hollowthorn – The Blade That Burns Back</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Revna Hollowthorn was born beneath the bleeding skies of the Shadow Fell, mid-war and mid-scream. The Wail of the Void had already swallowed the sun, and the war that followed made monsters of many and martyrs of more. But Revna was neither. She was a survivor.</p>
 
       <p>Her childhood was an endless dusk of running and hiding, ash-choked winds and shattered stone. She learned to move in silence. To fight when needed. To kill when cornered. There was no childhood in the traditional sense—only instinct, grit, and cunning. When the war finally dulled to a simmer, Revna was already more blade than girl.</p>
@@ -36,9 +36,9 @@
       <p>But to remind them who they belong to.</p>
     </section>
 <hr>
-    <h2 class="section-title">Of Hags, Hollowthorns, and Who Can Punch Harder</h2>
+    <h2 class="npc-title">Of Hags, Hollowthorns, and Who Can Punch Harder</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Meebs didn’t go looking for a warlock. She was just there to smash a hag.</p>
 
       <p>The bog near Briarhook had gone rotten—thick with choking vines, blighted lilies, and whispers that turned sane folk mad. Locals swore an ancient hag had taken root there, feeding on fear and fog. The town couldn’t afford a guild, so they posted coin for sellswords.</p>
