--- a/npc-index/npc-pages/twilight-isles/sister-meriel-vael.html
+++ b/npc-index/npc-pages/twilight-isles/sister-meriel-vael.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Sister Meriel Vael – The Dreaming Flame</h1>
+    <h1 class="npc-title">Sister Meriel Vael – The Dreaming Flame</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>There are those who follow gods out of fear. Others, out of need.</p>
 
       <p>But Meriel Vael was born with devotion already burning in her chest.</p>
@@ -50,9 +50,9 @@
       <p>And Sister Meriel Vael still listens.</p>
     </section>
     <hr>
-    <h2 class="section-title">Of Dawn-Blessed Daughters and the Keeper of Light</h2>
+    <h2 class="npc-title">Of Dawn-Blessed Daughters and the Keeper of Light</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Zostara first heard the name Sister Meriel Vael whispered through temple halls long before she ever met her. In the Twilight Isles, Meriel’s name carried weight—not with the clanging of titles, but with the hush of reverence. She was the flame that never flickered. The voice that could still a storm.</p>
 
       <p>When Zostara was a student, her classes occasionally brought her to the temple where Sister Meriel resided. At first, she didn’t stand out. Just another Kalashtar girl with questions in her eyes and more interest in the sky than the scripture.</p>
