--- a/npc-index/npc-pages/twilight-isles/vaela-raen.html
+++ b/npc-index/npc-pages/twilight-isles/vaela-raen.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Vaela Raen – The Moon’s Devotion</h1>
+    <h1 class="npc-title">Vaela Raen – The Moon’s Devotion</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Vaela Raen was born as a Dawn Cycle faded.</p>
 
       <p>Not at the end of all dawns—just the closing of her own. She was still a child when the skies began to change, when the golden light that had always touched the sea dimmed, and the first hints of eternal twilight crept into the corners of the day.</p>
@@ -46,9 +46,9 @@
       <p>And in a world where dusk has become dominion, she remains one of the few who sees beauty in its silence.</p>
     </section>
     <hr>
-    <h2 class="section-title">Of Silver Eyes and a Sky That Called Her</h2>
+    <h2 class="npc-title">Of Silver Eyes and a Sky That Called Her</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Zostara never planned to leave.</p>
 
       <p>Not really.</p>
