--- a/npc-index/npc-pages/twilight-isles/velka-aresk.html
+++ b/npc-index/npc-pages/twilight-isles/velka-aresk.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="section-title">Velka Aresk – The Ink of the Departed</h1>
+    <h1 class="npc-title">Velka Aresk – The Ink of the Departed</h1>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Velka Aresk was born as the light dimmed.</p>
 
       <p>She took her first breath on the very cusp of the Shadow Fell, when the skies above the Twilight Isles began to bleed dusk and the first screams of war echoed across the waters. Too young to fight. Too old to forget. She survived what so many did not—watched the war swallow her village, her family, her friends, one by one, until memory became her only inheritance.</p>
@@ -60,9 +60,9 @@
       <p>And in ink, memory endures.</p>
     </section>
     <hr>
-    <h2 class="section-title">Of Ruins, Remembrance, and the Grief We Share</h2>
+    <h2 class="npc-title">Of Ruins, Remembrance, and the Grief We Share</h2>
     <br>
-    <section class="story-section">
+    <section class="npc-story">
       <p>Meebs didn’t know where she was when she stumbled into the ruin.</p>
 
       <p>The Twilight Isles were unlike anywhere she’d ever seen—strange, glowing plants humming in the dark, sky full of stars that felt far too close. She had no memory of arriving, only the ache of loss trailing behind her like a cloak too heavy to carry. Cold. Hungry. Haunted.</p>
