--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -57,6 +57,7 @@
                 <li><a class="dropdown-item" href="#">Guilds</a></li>
                 <li><a class="dropdown-item" href="#">Maps</a></li>
                 <li><a class="dropdown-item" href="#">Deeper Lore</a></li>
+                <li><a class="dropdown-item" href="#">Notes and Journals</a></li>
               </ul>
             </li>
 
