--- a/npc-index/npc-pages/ember-desert/sazhra-dunewhisper.html
+++ b/npc-index/npc-pages/ember-desert/sazhra-dunewhisper.html
@@ -13,7 +13,7 @@
     <h1 class="npc-title">Sazhra Dunewhisper – The Sandwalker</h1>
     <br>
     <section class="npc-story">
-      <p>They whispered as she passed. They always had.</p>
+      <p>They whispered when she passed. They always had.</p>
 
       <p>Some said she was cursed. Others said she was a demon in a girl’s skin, a punishment born of a pact long forgotten. No one knew the truth, only the shape of her horns, the color of her eyes, and the chill her silence carried.</p>
 
@@ -25,7 +25,7 @@
 
       <p><em>Tiefling.</em></p>
 
-16gLaJKcDHVHbccbo9ayPsopB6gA1pZB888m8q6g2T8x6kBm
+      <p>They didn't say it. They sighed it.</p>
 
       <p>And when the sighs became silence, Sazhra left.</p>
 
@@ -33,7 +33,7 @@
 
       <p>The sands did not welcome her.</p>
 
-16gLaJKcDHVHbccbo9ayPsopB6gA1pZB888m8q6g2T8x6kBm
+      <p>But they did not judge her, either.</p>
 
       <p>At first, she stumbled. Fought. Cried. Sandstorms cut her skin raw. Night terrors prowled her camps. She nearly died, more than once. But she learned. She watched. She listened to the dunes, the winds, the weight of silence.</p>
 
