--- a/npc-index/npc-pages/ember-desert/tolla-jinxfuse.html
+++ b/npc-index/npc-pages/ember-desert/tolla-jinxfuse.html
@@ -91,7 +91,7 @@
 
       <p>And Shade knew instantly—before the smoke had cleared, before the bricks had finished falling—that she needed this tiny chaos engine in her guild.</p>
 
-16gLaJKcDHVHbccbo9ayPsopB6gA1pZB888m8q6g2T8x6kBm
+      <p>Not just because she was dangerous.</p>
 
       <p>Because she was the best kind of dangerous.</p>
 
