--- a/npc-index/npc-pages/ember-desert/tolla-jinxfuse.html
+++ b/npc-index/npc-pages/ember-desert/tolla-jinxfuse.html
@@ -25,7 +25,7 @@
 
       <p>Instead, she emptied her coinpurse, bought the small apothecary room she’d rented, and promptly blew out its windows experimenting with fire salts and powdered brimshade. The locals grumbled at first. Then they laughed. Then they started lining up to see what she’d invent next.</p>
 
-      <p>Years later, her workshop—known unofficially as the Blistering Cauldron—sits precariously on a terrace overlooking Ember Spire’s lower docks, a haphazard tower of chimneys, gearwork, and rusted metal domes that cough out smoke and steam at all hours of the day. Inside, the tables are cluttered with half-melted schematics, sparking prototypes, and a growing collection of “failed” inventions that still rattle with unpredictable energy.</p>
+      <p>Years later, her workshop—known unofficially as the Blistering Cauldron—sits precariously on a terrace overlooking Ironshard, a haphazard tower of chimneys, gearwork, and rusted metal domes that cough out smoke and steam at all hours of the day. Inside, the tables are cluttered with half-melted schematics, sparking prototypes, and a growing collection of “failed” inventions that still rattle with unpredictable energy.</p>
 
       <p>Tolla is rarely seen without black powder stains on her gloves and a grin on her face. She’s designed rifles taller than she is, built cannons meant to test the limits of stone, and once turned a carriage into a rocket-propelled getaway cart. Her neighbors have long since stopped trying to guess what she’s working on. It’s safer that way.</p>
 
