--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -75,7 +75,7 @@
     </nav>
 
 <body>
-  <h1 class="npc-ref-title">D&D NPC Reference Table</h1>
+  <h1 class="npc-ref-title">NPCs of Vaeloria</h1>
 
 <h2 class="npc-ref-place">Celestial Highlands</h2>
 <table class="npc-table">
